--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,17 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+.DS_Store
+.idea/
+.vscode/
+*.iml
+.quarkus/
+
+./**/target/
+./*/resource-servers/**/*.pem
+./**/certs/
+# Ignore pem files and certs directory for the oauth2-provider
+*/oauth2-provider/certs/
+*/oauth2-provider/**/*.pem
+*/oauth2-provider/*.pem
+*/resource-server/**/*.pem
